--- a/paper.tex
+++ b/paper.tex
@@ -459,10 +459,16 @@ E(k) \sim (\epsilon \varv_{\rm A})^{1/2} k^{-3/2}.
  
 It is important to realise that this Kraichnan scaling only applies at small scales, where turbulence is magneto-hydrodynamical. At large scales, turbulent motions are subsonic (${\mathcal M}_{\rm s} \sim 0.2-0.5$) but super-Alfv{\'e}nic (${\mathcal M}_{\rm A} \sim 5$). Thus, except in the case where motions are transsonic and weak shocks become important, motions are fundamentally hydrodynamic and turbulence follows a Kolmogorov ($s=5/3$) spectrum. However, while the turbulent energy density $\eps_{\rm turb} \propto l^{2/3}$ decreases at small scales, the magnetic energy density is scale-independent. Thus, at some scale $l_{\rm A} \sim l_L {\mathcal M}_{\rm A}^{-3}$, where $\eps_{\rm turb} \sim \eps_{B}$, the magnetic field becomes dynamically important, and turbulence transitions to the MHD regime. The cutoff scale in equation (\ref{eqn:Wk}) can be computed by setting the turbulent cascade rate for fast modes to the transit time damping rate on thermal electrons. This yields \citep{brunetti07,miniati15}:
 \begin{equation}
-k_{\rm cut} \approx A k_L \frac{\langle (\delta \varv_{\rmn{c}})^{2}\rangle^{2}}{c_{\rm s}^{4}}
+k_{\rm cut} \approx A k_{\rmn{outer}} \frac{\langle (\delta \varv_{\rmn{outer}})^{2}\rangle^{2}}{c_{\rm s}^{4}}
+\label{eqn:k_c1} 
+\end{equation}
+where $A \approx 11 000$. \cp{If there is an unimpeded cascade from the injection to the cutoff scale, $k_{\rmn{outer}}=k_L$ and $\varv_{\rmn{outer}}=\varv_{\rmn{c}}$. However, in our case the hydrodynamic (Kolmogorov) cascade transitions to the MHD cascade at the Alfv{\'e}n scale so that $k_{\rmn{outer}}=k_{\rmn{A}}$ and $\varv_{\rmn{outer}}=\varv_{\rmn{A}}$ and hence, we get\footnote{\cp{Note that this differs from previous work which uses the wave number and compressible velocity at the outer scale $L$ for this estimate of $k_{\rm cut}$.}}
+\begin{equation}
+k_{\rm cut} \approx A k_{\rmn{A}} \beta^{-2}\,.
 \label{eqn:k_c} 
 \end{equation}
-where $A \approx 11 000$. This gives $2\upi/k_\rmn{cut}\sim 0.1-1$~kpc in the ICM. This constitutes an
+}
+This gives $2\upi/k_\rmn{cut}\sim 0.1-1$~kpc in the ICM. This constitutes an
 effective mean free path for CRs, unless plasma instabilities can
 mediate interactions between turbulence and particles on smaller
 scales \citep{brunetti11}, a possibility we discuss in \S\ref{sect:self-limiting}. Another possibility is that compressible modes dissipate in weak shocks, resulting in Burgers' turbulence $s=2$ \citep{kowal10,porter15,miniati15}. If Burgers turbulence dominates, then particle acceleration rates are too slow in the face of cooling processes to explain radio haloes \citep{miniati15}, and an alternative model for radio haloes is required. 
@@ -512,7 +518,7 @@ reacceleration (equation \ref{eqn:Dpp}). Hence the acceleration time is independ
 %which is momentum independent.
 This should be compared against the lifetime of turbulence, $\tau_{\rm cl}$, and the cooling time $\tau_{\rm cool}$. In Table~\ref{tab:timescales}, we show both the thermal quantities and the
 timescales for CR cooling and (re)acceleration for three different
-spatial regions of the RH. The densities \citep{1992A&A...259L..31B} and temperatures \citep{2009ApJ...696.1886B,2001A&A...365L..67A} are derived from X-ray observations. To calculate synchrotron cooling times, we use $B$-fields derived from Faraday rotation measurements \citep{bonafede10}. To calculate the acceleration time, we need to assume an outer scale. We assume an injection scale $k_L=2\upi/\lambda_L$, where $\lambda_L = 100$ kpc, which were assumptions adopted in previous work \citep{2006MNRAS.366.1437S,brunetti07, brunetti11}. This length scale corresponds to an eddy turnover time on the outer scale of $\varv_L k_L^{-1} \sim 1.2$~Gyr if $\varv_L \sim 500 {\rm km \, s^{-1}}$, as is characteristic of a merger. Note that hydrodynamical simulations of clusters have sometimes found larger $\lambda_L$, in some cases comparable to the size of the cluster \citep{vazza11,miniati15}. This choice is degenerate with $X_{\rm tu}$; in \S\ref{sect:self-limiting} we argue that $k_{\rm A}$ is a more appropriate choice, but also find that when the decay time is appropriately scaled, we are relatively insensitive to the choice of $k_L$. We present $\tau_{\rm D}$ for 3 different models, which we discuss in the next section. The reacceleration timescale
+spatial regions of the RH. The densities \citep{1992A&A...259L..31B} and temperatures \citep{2009ApJ...696.1886B,2001A&A...365L..67A} are derived from X-ray observations. To calculate synchrotron cooling times, we use $B$-fields derived from Faraday rotation measurements \citep{bonafede10}. To calculate the acceleration time, we need to assume an outer scale. We assume an injection scale $k_L=2\upi/\lambda_L$, where $\lambda_L = 100$ kpc, which were assumptions adopted in previous work \citep{2006MNRAS.366.1437S,brunetti07, brunetti11}. This length scale corresponds to an eddy turnover time on the outer scale of \cp{\sout{$\varv_L k_L^{-1} \sim 1.2$~Gyr} $2\upi\lambda_L\varv_L^{-1} \sim 1.2$~Gyr} if $\varv_L \sim 500 {\rm km \, s^{-1}}$, as is characteristic of a merger. Note that hydrodynamical simulations of clusters have sometimes found larger $\lambda_L$, in some cases comparable to the size of the cluster \citep{vazza11,miniati15}. This choice is degenerate with $X_{\rm tu}$; in \S\ref{sect:self-limiting} we argue that $k_{\rm A}$ is a more appropriate choice, but also find that when the decay time is appropriately scaled, we are relatively insensitive to the choice of $k_L$. We present $\tau_{\rm D}$ for 3 different models, which we discuss in the next section. The reacceleration timescale
 $\tau_{\rm D}$ is similar between our three models, where the
 difference comes from turbulent profile parametrized with
 $\alpha_\rmn{tu}$. This implies that even small differences in the
@@ -1199,49 +1205,56 @@ D_{pp} = D_{pp}^{\rm HD}[l_{\rm A} < l < L] + D_{pp}^{\rm MHD}[l_{\rm cut} < l <
 \end{equation}
 From equations (\ref{eqn:diffusion}) and (\ref{eqn:k_W}), and assuming Kolmogorov turbulence from $l_{\rm A} < l < L$ and Kraichnan turbulence from $l_{\rm cut} < l < l_{\rm A}$, we get: 
 \begin{equation}
+  \label{eqn:Dratio}
   \frac{D_{pp}^{\rm HD}}{D_{pp}^{\rm MHD}}
   = \frac{\cp{2}k_L^{2/3}k_{\rm A}^{1/3} \varv_{\rm c}^{2}}{k_{\rm A}^{1/2}k_{\rm cut}^{1/2} \varv_{\rm A}^{2}}
-  = \cp{2 \left(A \mathcal{M}_\rmn{A}\right)^{-1/2}} \beta = 0.5 \left( \frac{\beta}{50} \right) 
+  = \cp{2} A^{-1/2} \beta = \cp{1.0}\, \left( \frac{\beta}{50} \right) 
 \end{equation}
-\cp{[This assumes the energy equipartition argument (by Sarkar) for $D_{pp}^\rmn{MHD}$ and for $D_{pp}^\rmn{HD}$; is this justified at the sme time? if so, why? and we should explain this in a footnote.]}
-where we have used $k_{\rm A} = k_L \mathcal{M}_{\rm A}^{3}$ (from Kolmogorov scalings), and $\mathcal{M}_{\rm A} = \varv_{\rm c}/\varv_{\rm A}$ is the Alfv{\'e}n Mach number of the turbulence, $\beta \approx c_{\rm s}^{2}/\varv_{\rm A}^{2}$, and the cutoff scale $k_{\rm cut}$ (equation \ref{eqn:k_c}).  Thus, the contribution of the two regimes are comparable (as we shall see later, this is not true if one incorrectly assumes Kraichnan scalings apply from the outer scale $L$; this boosts the contribution of the scales where $l_{\rm A} < l < L$ by a factor $\mathcal{M}_{\rm A}^{1/2}$). 
+where we have used $k_{\rm A} = k_L \mathcal{M}_{\rm A}^{3}$ (from Kolmogorov
+scalings), and $\mathcal{M}_{\rm A} = \varv_{\rm c}/\varv_{\rm A}$ is the
+Alfv{\'e}n Mach number of the turbulence, $\beta \approx c_{\rm
+  s}^{2}/\varv_{\rm A}^{2}$, and the cutoff scale $k_{\rm cut}$ (equation
+\ref{eqn:k_c}).  Thus, the contribution of the two regimes are
+comparable\footnote{\cp{The estimate of equation~(\ref{eqn:Dratio}) assumes that
+    in both cascades, kinetic and potential energy are in equipartition which is
+    likely an overestimate for the hydrodynamical cascade and hence, the
+    hydrodynamic contribution to the momentum diffusion would be small in
+    comparison to the MHD contribution. }} (as we shall see later, this is not
+true if one incorrectly assumes Kraichnan scalings apply from the outer scale
+$L$; this boosts the contribution of the scales where $l_{\rm A} < l < L$ by a
+factor $\mathcal{M}_{\rm A}^{1/2}$).
+
 Henceforth, we can consider the outer scale of the fast modes to be $l_{\rm A}$, with velocity $\varv_{\rm A}$. The turbulent reacceleration time is: 
-\begin{equation}
-\tau_{\rm D} = \frac{p^{2}}{4 D_{pp}} = C_{\rm D} A^{1/2} c k_{\rm A} \frac{\varv_{\rm A}^{2}}{c_{\rm S}^{2}}
-\label{eqn:tau_D} 
-\end{equation}
-\cp{[The previous equation is wrong (you can see this by checking the units). Instead I get:]
-\begin{equation}
-\tau_{\rm D} = \frac{p^{2}}{4 D_{pp}} = C_{\rm D} \left(A\mathcal{M}_\rmn{A}\right)^{-1/2} \frac{c}{k_{\rm A}} \frac{c_{\rm s}^{2}}{\varv_{\rm A}^{4}}
+%\begin{equation}
+%\tau_{\rm D} = \frac{p^{2}}{4 D_{pp}} = C_{\rm D} A^{1/2} c k_{\rm A} \frac{\varv_{\rm A}^{2}}{c_{\rm S}^{2}}
+%\label{eqn:tau_D} 
+%\end{equation}
+\cp{
+  \begin{equation}
+\tau_{\rm D} = \frac{p^{2}}{4 D_{pp}} = \frac{C_{\rm D}}{A^{1/2}}\, \frac{c}{k_{\rm A}}\, \frac{c_{\rm s}^{2}}{\varv_{\rm A}^{4}}
 \label{eqn:tau_D} 
 \end{equation}
 }
-where $C_{\rm D} = 2/(5 \upi)$, $A\approx 11000$, and we have used equation (\ref{eqn:k_c}). The turbulent decay time is given by the cascade time of fast modes (\citealt{2004ApJ...614..757Y}; see equation \ref{eqn:cascade}): 
+where $C_{\rm D} = 2/(5 \upi)$, $A\approx 11000$, and we have used equation (\ref{eqn:k_c}). The turbulent decay time is given by the cascade time of fast modes \cp{at the Alfv\'en scale $k=k_{\rmn{A}}$} (\citealt{2004ApJ...614..757Y}; see equation \ref{eqn:cascade}): 
 \begin{equation}
-\tau_{\rm decay} = \frac{c_{\rm s}}{\varv_{\rm A}^{2} k_{\rm A}^{}}\,.
+  \tau_{\rm decay} = \cp{\frac{\varv_{\rm ph}}{\varv_k^{2} k} = }
+  \frac{c_{\rm s}}{\varv_{\rm A}^{2} k_{\rm A}^{}}\,.
 \label{eqn:tau_decay} 
 \end{equation}
-\cp{[This agrees with Eqn. (3) of \citet{2004ApJ...614..757Y} but appears to disagree with our equation (\ref{eqn:tau_l}): Peng, do you understand this apparent contradiction? Can we motivate this important equation?]}
 This can be related to the eddy turnover time at the outer scale $\tau_{\rm edd}$ from $l_{\rm A} = L \mathcal{M}_{\rm A}^{-3}$ to: 
 \begin{equation}
 \tau_{\rm decay} =\frac{L}{\varv_{\rm c}} \left(\frac{c_{\rm s}}{\varv_{\rm c}} \right)^{2} \frac{\varv_{\rm A}}{c_{\rm s}} = 0.7 \, \tau_{\rm edd} \left(\frac{\tilde{X}_{\rm tu}}{0.2}\right)^{-1}  \left(\frac{\beta}{100} \right)^{-1/2}
 \end{equation}
 \cp{[I get 0.08 as prefactor mainly because of the $2\upi$ conversion from $k$ to $L$.]}
-where we have used $\tilde{X}_{\rm tu} \approx (\varv_{\rm c}/c_{\rm s})^{2}$ and $c_{\rm s}/\varv_{\rm A} = \beta^{1/2}$. Thus $\tau_{\rm decay} \sim \tau_{\rm edd}$, but we prefer to use the expression for $\tau_{\rm edd}$, since it is more physically correct and leads to more revealing scalings. 
+where we have used $\tilde{X}_{\rm tu} \approx (\varv_{\rm c}/c_{\rm s})^{2}$ and $c_{\rm s}/\varv_{\rm A} = \beta^{1/2}$. \cp{\sout{Thus $\tau_{\rm decay} \sim \tau_{\rm edd}$, but we prefer to use the expression for $\tau_{\rm edd}$, since it is more physically correct and leads to more revealing scalings. }}
 
 From equations (\ref{eqn:tau_D}) and (\ref{eqn:tau_decay}), we obtain:
 \begin{equation}
-\frac{\tau_{\rm cl}}{\tau_{\rm D}} \approx \frac{\tau_{\rm decay}}{\tau_{\rm D}} = 0.1 \left( \frac{c_{\rm s}}{1500 \, {\rm km \, s^{-1}}} \right) \left( \frac{\beta}{50} \right)^{-1}\,. 
+  \frac{\tau_{\rm cl}}{\tau_{\rm D}} \approx \frac{\tau_{\rm decay}}{\tau_{\rm D}}
+  \cp{= \frac{A^{1/2}}{C_{\rmn{D}}}\,\frac{c_{\rm s}}{c}\,\beta^{-1}}
+  = 0.1 \left( \frac{c_{\rm s}}{1500 \, {\rm km \, s^{-1}}} \right) \left( \frac{\beta}{50} \right)^{-1}\,. 
 \label{eqn:ratios_TTD} 
 \end{equation}
-\cp{[I get]
-  \begin{eqnarray}
-    \frac{\tau_{\rm cl}}{\tau_{\rm D}} &\approx& \frac{\tau_{\rm decay}}{\tau_{\rm D}}
-    \approx\frac{0.6\sqrt{A}\mathcal{M}_\rmn{A}^{7/2}}{C_\rmn{D}\beta}\,\frac{\varv_\rmn{A}^2}{\varv_\rmn{c} c}\nonumber\\
-    &\approx&0.1 \left( \frac{c_{\rm s}}{1000 \, {\rm km \, s^{-1}}} \right) \left( \frac{\beta}{100} \right)^{-1}\, 
-\label{eqn:ratios_TTD} 
-\end{eqnarray}
-[which is {\bf not} independent of the properties of turbulence!]}
 Remarkably, this expression is independent of properties of the turbulence such as $\varv_{\rm c}$, $L$, or $l_{\rm A}$, and depends only on properties of the plasma ($c_{\rm s},\beta$). Ultimately, this arises because the timescale on which a fast mode wave transfers energy due to wave particle interactions in second order Fermi acceleration, $\tau_{\rm p} \sim [\cp{4\,} k_{\rm p} c (\varv_{\rm c}/c)^{2} ]^{-1}$, is closely related to the timescale on which it cascades due to wave-wave interactions, $\tau_{\rm w} \sim c_{\rm s}/(k_{\rm w} \varv_{\rm c}^{2})$. This implies $\tau_{\rm w}/\tau_{\rm p} \sim \cp{4\,} (c_{\rm s}/c)(l_{\rm w}/l_{\rm p})$, where $l_{\rm w} \sim l_{\rm A}$ is the outer scale on which the fast mode cascade begins, and $l_{\rm p} \sim (l_{\rm A} l_{\rm cut})^{1/2}$ is the characteristic wavelength for wave-particle interactions. For transit time damping and an outer scale of $l_{\rm A}$, we have $l_{\rm cut} \sim (m_{\rm e}/m_{\rm p}) l_{\rm A} (c_{\rm s}/\varv_{\rm A})^{4}$. We thus have $\tau_{\rm w}/\tau_{\rm p} \sim \cp{4\,}(c_{\rm s}/c)(l_{\rm A}/l_{\rm cut})^{1/2} \sim \cp{4\,}(c_{\rm s}/c) (m_{\rm p}/m_{\rm e})^{1/2} \beta^{-1}$. More careful consideration of dimensionless factors boosts this estimate by an order of magnitude to give equation (\ref{eqn:ratios_TTD}). 
 
 On the other hand, equation (\ref{eqn:ratios_TTD}) points toward a pessimistic scenario where turbulent reacceleration with TTD on thermal particles is never effective. A key reason is that we assume Kraichnan turbulence only applies for $l< l_{\rm A}$. There is then insufficient separation of scales: the cutoff scale $l_{\rm cut} \sim 0.2 \beta_{\rm 50}^{2} l_{\rm A}$. Although there is a fair large separation of scales between the outer driving scale $L$ and $l_{\rm A} = L \mathcal{M}_{\rm A}^{-3}$ (a factor of $30-1000$ for $\mathcal{M}_{\rm A} \approx 3-10$; we have $\mathcal{M}_{\rm A} \sim (\tilde{X}_{\rm tu} \beta)^{1/2} \sim 3.2$ for our fiducial assumptions), Kolmogorov turbulence, with its steeper spectrum, has more energy at large scales ($k W(k) \propto k^{-2/3}, k^{-1/2}$ for Kolmogorov and Kraichnan turbulence, respectively). This implies that the energy-weighted scales at which wave-particle interaction take place are larger in Kolmogorov turbulence, and thus that the wave-particle interaction rate is lower. If (as is frequently seen) we instead assume that Kraichnan turbulence begins at the outer scale $L$, with characteristic decay time $L c_{\rm s}/\varv_{\rm c}^{2}$, then we obtain a more palatable result: 
